--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-3d-cube": "^1.0.5",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "styled-components": "^5.3.6"
