--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-3d-cube": "^1.0.5",
     "react-dom": "^18.2.0",
