--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-3d-cube": "^1.0.5",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.6.1",
