--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^6.6.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "zustand": "^4.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
