--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
+    "react-kakao-maps-sdk": "^1.1.5",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.6.1",
     "react-slick": "^0.29.0",
@@ -26,6 +27,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-html-env": "^1.2.7"
   }
 }
