--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
+    "vite-plugin-html-env": "^1.2.7",
     "zustand": "^4.3.1"
   },
   "devDependencies": {
