--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.4",
     "react": "^18.2.0",
     "react-3d-cube": "^1.0.5",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-kakao-maps-sdk": "^1.1.5",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.6.1",
-    "styled-components": "^5.3.6"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.6",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-html-env": "^1.2.7"
   }
 }
