--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://DJU-dev.github.io/Squid",
+  "homepage" : "https://DJU-dev.github.io/frontend",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
