--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://DJU-dev.github.io/frontend",
+  "homepage" : "https://DJU-dev.github.io",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
@@ -9,7 +9,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start"
   },
   "dependencies": {
     "axios": "^1.2.2",
