--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://DJU-dev.github.io/frontend/",
+  "homepage": "https://DJU-dev.github.io/frontend/",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
@@ -18,6 +18,7 @@
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-kakao-maps-sdk": "^1.1.5",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.6.1",
